--- a/ICT13580057B2/ICT13580057B2/MainPage.xaml
+++ b/ICT13580057B2/ICT13580057B2/MainPage.xaml
@@ -4,8 +4,74 @@
              xmlns:local="clr-namespace:ICT13580057B2"
              x:Class="ICT13580057B2.MainPage">
 
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <ContentPage.ToolbarItems>
+        <ToolbarItem
+            Text="เพิ่มสินค้า"
+            x:Name="newButton"
+            />
+    </ContentPage.ToolbarItems>
+    <ListView
+        x:Name="productListView"
+        RowHeight="100">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+
+
+                    <ViewCell.ContextActions>
+                        <MenuItem
+                            Text="Edit"
+                            CommandParameter="{Binding .}"
+                            Clicked="Edit_Clicked"/>
+                        <MenuItem
+                            Text="Delete"
+                            CommandParameter="{Binding .}"
+                            IsDestructive="true"
+                            Clicked="Delete_Clicked"/>
+                    </ViewCell.ContextActions>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100" />
+                            <ColumnDefinition  />
+                            <ColumnDefinition Width="50" />
+
+
+                        </Grid.ColumnDefinitions>
+                        <Image
+                            BackgroundColor="AntiqueWhite"
+                            HeightRequest="100"
+                            Source="https://pbs.twimg.com/profile_images/761396902508187648/rJoZ9d_1.jpg"/>
+                        <StackLayout
+                            Grid.Column="1">
+                            <Label
+                                Text="{Binding Name}"
+                                FontAttributes="Bold"
+                                TextColor="Sienna"/>
+                            <Label
+                                Text="{Binding Description}"
+                                LineBreakMode="TailTruncation"/>
+                            <Label
+                                Text="{Binding SellPrice,StringFormat='ÃÒ¤Ò¢ÒÂ{0:N0} ºÒ·'}"/>
+                            <Label
+                                Text="{Binding Stock,StringFormat='ÊÔ¹¤éÒ¤§àËÅ×Í:  {0}'}"/>
+
+
+                        </StackLayout>
+                        <Button
+                            Text="+"
+                            FontSize="30"
+                            Grid.Column="2"
+                            Margin="5"
+                            BackgroundColor="SaddleBrown"
+                            VerticalOptions="End"
+                            HeightRequest="50"
+                            />
+                    </Grid>
+
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
+    </ListView>
 
 </ContentPage>
